@@ -1,4 +1,8 @@
 
+2006-09-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* doc/xmldocs.make: added appid and changed directories to
+		make appid for references work
+
 2006-09-22  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* doc: first draft of manual
 
